--- a/company-info-tab3.html
+++ b/company-info-tab3.html
@@ -108,9 +108,9 @@
     <div class="arrowDown">
       <!-- <div class="arrow"><i class="bi bi-caret-down-fill"></i></div> -->
       <select class="" name="업체명">
-        <option value="업체명">업체명</option>
-        <option value="업체명">업체명</option>
-        <option value="업체명">업체명</option>
+        <option value="업체명">냉각탑</option>
+        <option value="업체명">보일러</option>
+        <option value="업체명">RO</option>
       </select>
     </div>
     <h2>Chemical 투입 내역</h2>
@@ -121,8 +121,21 @@
       </tr>
       <tr>
         <td>제품명</td>
-        <td><input type="text"></td><td class="divsion">/</td>
-        <td><input type="text"></td>
+        <td colspan="3"><input type="text"></td>
+      </tr>
+      <tr>
+        <td>제품명</td>
+        <td>
+          <select name="" id="">
+            <option value="item">item</option>
+          </select>
+        </td>
+        <td class="divsion">/</td>
+        <td>
+          <select name="" id="">
+            <option value="item">item</option>
+          </select>
+        </td>
       </tr>
       <tr>
         <td>제품명</td>
