--- a/company-info-tab3.html
+++ b/company-info-tab3.html
@@ -126,13 +126,15 @@
       <tr>
         <td>제품명</td>
         <td>
-          <select name="" id="">
+          <select name="items" id="">
+            <option disabled selected>items</option>
             <option value="item">item</option>
           </select>
         </td>
         <td class="divsion">/</td>
         <td>
-          <select name="" id="">
+          <select name="items" id="">
+            <option disabled selected>items</option>
             <option value="item">item</option>
           </select>
         </td>
