--- a/company-info-tab3.html
+++ b/company-info-tab3.html
@@ -155,7 +155,11 @@
       <button>등록</button>
     </div>
   </div>
-
+<style>
+select {
+  background: #f5f5f5; border: none !important;
+}
+</style>
   <div id="popupBg" class="popupBg"></div>
 
 <script src="assets/script.js"></script>
