--- a/ex.html
+++ b/ex.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,4 +14,12 @@
     <option value="item">item</option>
   </select>
 </body>
+<style>
+select {
+  background: red;
+}
+option {
+  
+}
+</style>
 </html>
