--- a/diary.html
+++ b/diary.html
@@ -62,8 +62,24 @@
       </tr>
       <tr>
         <td>방문시간</td>
-        <td><input type="number" placeholder="00시"></td><td class="divsion">/</td>
-        <td><input type="number" placeholder="00분"></td>
+        <td>
+          <select class="" name="">
+            <option disabled selected>00시</option>
+            <option value="03">03</option>
+            <option value="04">04</option>
+            <option value="05">05</option>
+          </select>
+        </td>
+        <td class="divsion">/</td>
+        <td>
+          <select class="" name="">
+            <option disabled selected>00분</option>
+            <option value="01">01</option>
+            <option value="03">03</option>
+            <option value="04">04</option>
+            <option value="05">05</option>
+          </select>
+        </td>
       </tr>
       <tr>
         <td>업체명</td>
@@ -347,7 +363,7 @@
       </table>
     </section>
     </div>
-
+<style> select {background: #f5f5f5; border: none !important;} </style>
 <script src="assets/script.js"></script>
   <script src="assets/sub.js"></script>
   <script src="assets/asideMenu.js"></script>
