--- a/sub.html
+++ b/sub.html
@@ -102,19 +102,19 @@
         <table>
           <tr>
             <th>10:00</th>
-            <td>업체명, 할 일, 기타등등...업체명, 할 일, 기타등등...</td>
+            <td >업체명, 할 일, 기타등등...</td>
           </tr>
           <tr>
             <th>10:00</th>
-            <td>업체명, 할 일, 기타등등...업체명, 할 일, 기타등등...</td>
+            <td>업체명, 할 일, 기타등등...</td>
           </tr>
           <tr>
             <th>10:00</th>
-            <td>업체명, 할 일, 기타등등...업체명, 할 일, 기타등등...</td>
+            <td>업체명, 할 일, 기타등등...</td>
           </tr>
           <tr>
             <th>10:00</th>
-            <td>업체명, 할 일, 기타등등...업체명, 할 일, 기타등등...</td>
+            <td>업체명, 할 일, 기타등등...</td>
           </tr>
         </table>
       </section>
