--- a/company-info-tab3.html
+++ b/company-info-tab3.html
@@ -69,7 +69,7 @@
 
     <section class="co_wrapper co_tabContent">
       <table>
-        <tr><td>No</td><td>작성자</td><td>투약일</td></tr>
+        <tr><td>No</td><td>작성자</td><td>투약일</td><a href="company-info-tab3-view"></a></tr>
         <tr><td>1</td><td>홍길동</td><td>2021.09.02</td></tr>
         <tr><td>2</td><td>홍길동</td><td>2021.09.02</td></tr>
         <tr><td>3</td><td>홍길동</td><td>2021.09.02</td></tr>
@@ -120,11 +120,11 @@
         <td colspan="3" class="tableTh">투입량</td>
       </tr>
       <tr>
-        <td>제품명</td>
+        <td>Aqusof 160</td>
         <td colspan="3"><input type="text"></td>
       </tr>
       <tr>
-        <td>제품명</td>
+        <td>Pump Strock</td>
         <td>
           <select name="items" id="">
             <option disabled selected>items</option>
@@ -140,12 +140,32 @@
         </td>
       </tr>
       <tr>
-        <td>제품명</td>
+        <td>Aqusof 1601</td>
         <td colspan="3"><input type="text"></td>
       </tr>
       <tr>
-        <td>제품명</td>
+        <td>Aqusof 1601-1</td>
         <td colspan="3"><input type="text"></td>
+      </tr>
+      <tr>
+        <td>Aqusof B10</td>
+        <td colspan="3"><input type="text"></td>
+      </tr>
+      <tr>
+        <td>Pump Strock</td>
+        <td>
+          <select name="items" id="">
+            <option disabled selected>items</option>
+            <option value="item">item</option>
+          </select>
+        </td>
+        <td class="divsion">/</td>
+        <td>
+          <select name="items" id="">
+            <option disabled selected>items</option>
+            <option value="item">item</option>
+          </select>
+        </td>
       </tr>
     </table>
     <h2>Comment</h2>
