--- a/company-info-tab3.html
+++ b/company-info-tab3.html
@@ -70,11 +70,23 @@
     <section class="co_wrapper co_tabContent">
       <table>
         <tr><td>No</td><td>작성자</td><td>투약일</td></tr>
-        <a href="company-info-tab3-view"><tr><td>1</td><td>홍길동</td><td>2021.09.02</td></tr></a>
-        <tr><td>2</td><td>홍길동</td><td>2021.09.02</td><a href="company-info-tab3-view.html"></a></tr>
-        <tr><td>3</td><td>홍길동</td><td>2021.09.02</td><a href="company-info-tab3-view.html"></a></tr>
-        <tr><td>4</td><td>홍길동</td><td>2021.09.02</td><a href="company-info-tab3-view.html"></a></tr>
-        <tr><td>5</td><td>홍길동</td><td>2021.09.02</td><a href="company-info-tab3-view.html"></a></tr>
+
+        <tr onClick = " location.href='company-info-tab3-view.html' " >
+          <td>1</td><td>홍길동</td><td>2021.09.02</td>
+        </tr>
+        <tr onClick = " location.href='company-info-tab3-view.html' " >
+          <td>2</td><td>홍길동</td><td>2021.09.02</td>
+        </tr>
+        <tr onClick = " location.href='company-info-tab3-view.html' " >
+          <td>3</td><td>홍길동</td><td>2021.09.02</td>
+        </tr>
+        <tr onClick = " location.href='company-info-tab3-view.html' " >
+          <td>4</td><td>홍길동</td><td>2021.09.02</td>
+        </tr>
+        <tr onClick = " location.href='company-info-tab3-view.html' " >
+          <td>5</td><td>홍길동</td><td>2021.09.02</td>
+        </tr>
+
       </table>
       <table>
         <tr><td>No</td><td>작성자</td><td>투약일</td></tr>
