--- a/company-info-tab3-view.html
+++ b/company-info-tab3-view.html
@@ -104,7 +104,7 @@
     </table>
 
     <div>
-      <button class="updateBtn">수정</button>
+      <button class="updateBtn" id="popBtn">수정하기</button>
     </div>
   </div>
 
@@ -115,7 +115,86 @@
 
 
 
-
+  <div id="popup" class="popup">
+    <button id="close"><i class="bi bi-x-lg"></i></button>
+    <h1>업무노트 작성</h1>
+    <select class="" name="업체명">
+      <option value="업체명">업체명</option>
+      <option value="업체명">업체명</option>
+      <option value="업체명">업체명</option>
+    </select>
+    <div class="arrowDown">
+      <!-- <div class="arrow"><i class="bi bi-caret-down-fill"></i></div> -->
+      <select class="" name="업체명">
+        <option value="업체명">냉각탑</option>
+        <option value="업체명">보일러</option>
+        <option value="업체명">RO</option>
+      </select>
+    </div>
+    <h2>Chemical 투입 내역</h2>
+    <table>
+      <tr>
+        <td>제품명</td>
+        <td colspan="3" class="tableTh">투입량</td>
+      </tr>
+      <tr>
+        <td>Aqusof 160</td>
+        <td colspan="3"><input type="text"></td>
+      </tr>
+      <tr>
+        <td>Pump Strock</td>
+        <td>
+          <select name="items" id="">
+            <option disabled selected>items</option>
+            <option value="item">item</option>
+          </select>
+        </td>
+        <td class="divsion">/</td>
+        <td>
+          <select name="items" id="">
+            <option disabled selected>items</option>
+            <option value="item">item</option>
+          </select>
+        </td>
+      </tr>
+      <tr>
+        <td>Aqusof 1601</td>
+        <td colspan="3"><input type="text"></td>
+      </tr>
+      <tr>
+        <td>Aqusof 1601-1</td>
+        <td colspan="3"><input type="text"></td>
+      </tr>
+      <tr>
+        <td>Aqusof B10</td>
+        <td colspan="3"><input type="text"></td>
+      </tr>
+      <tr>
+        <td>Pump Strock</td>
+        <td>
+          <select name="items" id="">
+            <option disabled selected>items</option>
+            <option value="item">item</option>
+          </select>
+        </td>
+        <td class="divsion">/</td>
+        <td>
+          <select name="items" id="">
+            <option disabled selected>items</option>
+            <option value="item">item</option>
+          </select>
+        </td>
+      </tr>
+    </table>
+    <h2>Comment</h2>
+    <textarea name="name" rows="8" cols="80"></textarea>
+    <div>
+      <button id="closeBtn">취소</button>
+      <button>등록</button>
+    </div>
+  </div>
+  <!-- <style> select {background: #f5f5f5; border: none !important;} </style> -->
+  <div id="popupBg" class="popupBg"></div>
 <script src="assets/script.js"></script>
 <script src="assets/asideMenu.js"></script>
 <script src="assets/company.js"></script>
