--- a/company-info-tab3.html
+++ b/company-info-tab3.html
@@ -111,7 +111,7 @@
 
 }
 </style>
-  <footer></footer>
+  <!-- <footer></footer> -->
 
   <div id="popup" class="popup">
     <button id="close"><i class="bi bi-x-lg"></i></button>
