--- a/company-info-tab3-view.html
+++ b/company-info-tab3-view.html
@@ -117,7 +117,7 @@
 
   <div id="popup" class="popup">
     <button id="close"><i class="bi bi-x-lg"></i></button>
-    <h1>업무노트 작성</h1>
+    <h1>업무노트 수정</h1>
     <select class="" name="업체명">
       <option value="업체명">업체명</option>
       <option value="업체명">업체명</option>
