--- a/company.html
+++ b/company.html
@@ -86,6 +86,7 @@
   <div class="container">
     <section class="select">
       <select name="업체이름" id="">
+        <option disabled selected value="업체이름">업체 선택</option>
         <option value="업체이름">A업체이름</option>
         <option value="업체이름">B업체이름</option>
         <option value="업체이름">C업체이름</option>
