--- a/company.html
+++ b/company.html
@@ -104,7 +104,7 @@
         <h2><strong>최근 방문일</strong> : 2020.12.29. 15:30</h2>
       </article>
       <article class="accordion">
-        <div class="toggleBar">
+        <div class="toggleBar toggleBar1">
           <h2>LSI지수 : <strong> 033</strong></h2>
           <span><i class="bi bi-chevron-down"></i><i class="bi bi-chevron-up"></i></span>
         </div>
@@ -142,7 +142,7 @@
         <h2><strong>최근 방문일</strong> : 2020.12.29. 15:30</h2>
       </article>
       <article class="accordion">
-        <div class="toggleBar">
+        <div class="toggleBar toggleBar2">
           <h2>LSI지수 : <strong> 033</strong></h2>
           <span><i class="bi bi-chevron-down"></i><i class="bi bi-chevron-up"></i></span>
         </div>
@@ -175,7 +175,7 @@
         <h2><strong>최근 방문일</strong> : 2020.12.29. 15:30</h2>
       </article>
       <article class="accordion">
-        <div class="toggleBar">
+        <div class="toggleBar toggleBar3">
           <h2>LSI지수 : <strong> 033</strong></h2>
           <span><i class="bi bi-chevron-down"></i><i class="bi bi-chevron-up"></i></span>
         </div>
