--- a/company.html
+++ b/company.html
@@ -106,7 +106,7 @@
       <article class="accordion">
         <div class="toggleBar toggleBar1">
           <h2>LSI지수 : <strong> 033</strong></h2>
-          <span><i class="bi bi-chevron-down"></i><i class="bi bi-chevron-up"></i></span>
+          <span><i class="bi bi-chevron-up"></i><i class="bi bi-chevron-down"></i></span>
         </div>
         <div class="content">
           <section class="tabBtn">
