--- a/company.html
+++ b/company.html
@@ -108,8 +108,8 @@
           <h2>LSI지수 : <strong> 033</strong></h2>
           <span><i class="bi bi-chevron-up"></i><i class="bi bi-chevron-down"></i></span>
         </div>
-        <div class="content">
-          <section class="tabBtn">
+        <div class="content content1">
+          <section class="tabBtn tabBtn1">
             <button>냉각탑</button>
             <button>보일러</button>
             <button>R.O</button>
@@ -146,8 +146,8 @@
           <h2>LSI지수 : <strong> 033</strong></h2>
           <span><i class="bi bi-chevron-down"></i><i class="bi bi-chevron-up"></i></span>
         </div>
-        <div class="content">
-          <section class="tabBtn">
+        <div class="content content2">
+          <section class="tabBtn tabBtn2">
             <button>냉각탑</button>
             <button>보일러</button>
             <button>R.O</button>
@@ -179,8 +179,8 @@
           <h2>LSI지수 : <strong> 033</strong></h2>
           <span><i class="bi bi-chevron-down"></i><i class="bi bi-chevron-up"></i></span>
         </div>
-        <div class="content">
-          <section class="tabBtn">
+        <div class="content content3">
+          <section class="tabBtn tabBtn3">
             <button>냉각탑</button>
             <button>보일러</button>
             <button>R.O</button>
