--- a/company-info.html
+++ b/company-info.html
@@ -72,9 +72,9 @@
       <article class="accordion">
         <div class="toggleBar">
           <h2>업체 위치정보</h2>
-          <span><i class="bi bi-chevron-down"></i></span>
+          <span><i class="bi bi-chevron-up"></i><i class="bi bi-chevron-down"></i></span>
         </div>
-        <div class="content">
+        <div class="content content1">
           <p>충청남도 당진시 석문면 대호만로 1221-32</p>
           <div class="map">
 
@@ -87,12 +87,12 @@
     <section class="co_wrapper">
 
       <article class="accordion">
-        <div class="toggleBar">
+        <div class="toggleBar toggleBar2">
           <h2>사용약품보기</h2>
-          <span><i class="bi bi-chevron-down"></i></span>
+          <span><i class="bi bi-chevron-down"></i><i class="bi bi-chevron-up"></i></span>
         </div>
-        <div class="content">
-          <section class="tabBtn">
+        <div class="content content2">
+          <section class="tabBtn tabBtn2">
             <button>냉각탑</button>
             <button>보일러</button>
             <button>R.O</button>
