--- a/company-info.html
+++ b/company-info.html
@@ -70,7 +70,7 @@
     <section class="co_wrapper">
 
       <article class="accordion">
-        <div class="toggleBar">
+        <div class="toggleBar toggleBar1">
           <h2>업체 위치정보</h2>
           <span><i class="bi bi-chevron-up"></i><i class="bi bi-chevron-down"></i></span>
         </div>
