--- a/company-info-tab2.html
+++ b/company-info-tab2.html
@@ -59,11 +59,11 @@
 
     <section class="co_wrapper">
       <article class="accordion">
-        <div class="toggleBar">
+        <div class="toggleBar toggleBar1">
           <h2>냉각탑</h2>
-          <span><i class="bi bi-chevron-down"></i></span>
+          <span><i class="bi bi-chevron-up"></i><i class="bi bi-chevron-down"></i></span>
         </div>
-        <div class="content">
+        <div class="content content1">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero ratione, labore ea culpa voluptatum ducimus eum, corporis, esse numquam atque a, maiores fugit illo. Voluptatibus ipsum aspernatur vero in dolore.
         </div>
       </article>
@@ -72,11 +72,11 @@
     <section class="co_wrapper">
 
       <article class="accordion">
-        <div class="toggleBar">
+        <div class="toggleBar toggleBar2">
           <h2>보일러</h2>
-          <span><i class="bi bi-chevron-down"></i></span>
+          <span><i class="bi bi-chevron-down"></i><i class="bi bi-chevron-up"></i></span>
         </div>
-        <div class="content">
+        <div class="content content2">
           <p>현장위치메모</p>
           <textarea name="name" rows="8" cols="80"></textarea>
 
