--- a/company-info-tab3.html
+++ b/company-info-tab3.html
@@ -198,6 +198,19 @@
 <script src="assets/asideMenu.js"></script>
 <script src="assets/company.js"></script>
 <script src="assets/popup.js"></script>
+<script>
+$(function(){
+  $(".co_tabContent > table").hide();
+  $(".co_tabContent > table").eq(0).show();
+  $('.co_tabBtn > h2').click(function(e){
+    e.preventDefault();
+    var target = $(this);
+    var index = target.index();
+    $(".co_tabContent > table").css({display:'none'});
+    $(".co_tabContent > table").eq(index).show();
+  });
+});
+</script>
 
 
 </body>
