--- a/company-info-tab2.html
+++ b/company-info-tab2.html
@@ -64,7 +64,35 @@
           <span><i class="bi bi-chevron-up"></i><i class="bi bi-chevron-down"></i></span>
         </div>
         <div class="content content1">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero ratione, labore ea culpa voluptatum ducimus eum, corporis, esse numquam atque a, maiores fugit illo. Voluptatibus ipsum aspernatur vero in dolore.
+
+
+          <p>현장위치메모</p>
+          <textarea name="name" rows="8" cols="80"></textarea>
+
+          <link rel="stylesheet" href="assets/slide/style.css">
+          <!-- partial:index.partial.html -->
+          <div class="carousel" id="carousel">
+            <div class="control-container">
+              <div class="prev" id="prev">&#10094</div>
+              <div class="image-selectors">
+                <div class="circle" id="circle1" style="background-color: #FF6464;"></div>
+                <div class="circle" id="circle2"></div>
+                <div class="circle" id="circle3"></div>
+              </div>
+              <div class="next" id="next">&#10095</div>
+            </div>
+            <div class="slides" id="slides" style="margin-left:0px;">
+              <div class="slide slide1"></div>
+              <div class="slide slide2"></div>
+              <div class="slide slide3"></div>
+            </div>
+          </div>
+          <!-- partial -->
+            <script  src="assets/slide/script.js"></script>
+
+          <button>등록</button>
+
+
         </div>
       </article>
     </section>
