--- a/company-info-tab2.html
+++ b/company-info-tab2.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="assets/slick/slick.css">
+  <link rel="stylesheet" type="text/css" href="assets/slick/slick-theme.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="assets/style.css">
   <link rel="stylesheet" href="assets/company-info.css">
+  <link rel="stylesheet" href="assets/slickCustom.css">
   <title>GSK main</title>
+  <style type="text/css">
 
+  </style>
 </head>
 <body>
    <header>
@@ -44,7 +48,7 @@
    </aside>
    <div class="asideBg"></div>
 
-  <div class="container">
+<div class="container">
 
 <section class="co-header">
   <div>
@@ -64,34 +68,30 @@
           <span><i class="bi bi-chevron-up"></i><i class="bi bi-chevron-down"></i></span>
         </div>
         <div class="content content1">
-
-
           <p>현장위치메모</p>
           <textarea name="name" rows="8" cols="80"></textarea>
 
-          <link rel="stylesheet" href="assets/slide/style.css">
-          <!-- partial:index.partial.html -->
-          <div class="carousel" id="carousel">
-            <div class="control-container">
-              <div class="prev" id="prev">&#10094</div>
-              <div class="image-selectors">
-                <div class="circle" id="circle1" style="background-color: #FF6464;"></div>
-                <div class="circle" id="circle2"></div>
-                <div class="circle" id="circle3"></div>
-              </div>
-              <div class="next" id="next">&#10095</div>
-            </div>
-            <div class="slides" id="slides" style="margin-left:0px;">
-              <div class="slide slide1"></div>
-              <div class="slide slide2"></div>
-              <div class="slide slide3"></div>
-            </div>
-          </div>
-          <!-- partial -->
-            <script  src="assets/slide/script.js"></script>
 
-          <button>등록</button>
-
+          <section class="lazy slider" data-sizes="50vw">
+            <div>
+              <img data-lazy="http://placehold.it/350x300?text=1-350w" data-srcset="http://placehold.it/650x300?text=1-650w 650w, http://placehold.it/960x300?text=1-960w 960w" data-sizes="100vw">
+            </div>
+            <div>
+              <img data-lazy="http://placehold.it/350x300?text=2-350w" data-srcset="http://placehold.it/650x300?text=2-650w 650w, http://placehold.it/960x300?text=2-960w 960w" data-sizes="100vw">
+            </div>
+            <div>
+              <img data-lazy="http://placehold.it/350x300?text=3-350w"  data-srcset="http://placehold.it/650x300?text=3-650w 650w, http://placehold.it/960x300?text=3-960w 960w" data-sizes="100vw">
+            </div>
+            <div>
+              <img data-lazy="http://placehold.it/350x300?text=4-350w"  data-srcset="http://placehold.it/650x300?text=4-650w 650w, http://placehold.it/960x300?text=4-960w 960w" data-sizes="100vw">
+            </div>
+            <div>
+              <img data-lazy="http://placehold.it/350x300?text=5-350w"  data-srcset="http://placehold.it/650x300?text=5-650w 650w, http://placehold.it/960x300?text=5-960w 960w" data-sizes="100vw">
+            </div>
+            <div>
+              <img data-lazy="http://placehold.it/350x300?text=6-350w"  data-srcset="http://placehold.it/650x300?text=6-650w 650w, http://placehold.it/960x300?text=6-960w 960w">
+            </div>
+          </section>
 
         </div>
       </article>
@@ -109,7 +109,6 @@
           <textarea name="name" rows="8" cols="80"></textarea>
 
           <link rel="stylesheet" href="assets/slide/style.css">
-          <!-- partial:index.partial.html -->
           <div class="carousel" id="carousel">
             <div class="control-container">
               <div class="prev" id="prev">&#10094</div>
@@ -126,9 +125,6 @@
               <div class="slide slide3"></div>
             </div>
           </div>
-          <!-- partial -->
-            <script  src="assets/slide/script.js"></script>
-
           <button>등록</button>
 
         </div>
@@ -138,11 +134,31 @@
 
   <footer></footer>
 
+  <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+  <script src="assets/slick/slick.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript">
+    $(document).on('ready', function() {
+
+      $(".lazy").slick({
+        slidesToShow : 1,
+        infinite: true,
+        dots: true,
+        autoplay: true,
+        draggable : true,
+      });
+    });
+</script>
 
 
   <script src="assets/script.js"></script>
+  <script  src="assets/slide/script.js"></script>
   <script src="assets/asideMenu.js"></script>
   <script src="assets/company.js"></script>
   <script src="assets/acc.js"></script>
+
+
+
 </body>
+
+
 </html>
