--- a/company-info-tab2.html
+++ b/company-info-tab2.html
@@ -69,30 +69,30 @@
         </div>
         <div class="content content1">
           <p>현장위치메모</p>
-          <textarea name="name" rows="8" cols="80"></textarea>
+          <textarea name="name" rows="4" cols="80"></textarea>
 
 
-          <section class="lazy slider" data-sizes="50vw">
+          <section class="lazy slider" data-sizes="100vw">
             <div>
-              <img data-lazy="http://placehold.it/350x300?text=1-350w" data-srcset="http://placehold.it/650x300?text=1-650w 650w, http://placehold.it/960x300?text=1-960w 960w" data-sizes="100vw">
+              <img src="assets/imgs/mainbg.jpg" alt="img">
             </div>
             <div>
-              <img data-lazy="http://placehold.it/350x300?text=2-350w" data-srcset="http://placehold.it/650x300?text=2-650w 650w, http://placehold.it/960x300?text=2-960w 960w" data-sizes="100vw">
+              <img src="assets/imgs/mainbg.jpg" alt="img">
             </div>
             <div>
-              <img data-lazy="http://placehold.it/350x300?text=3-350w"  data-srcset="http://placehold.it/650x300?text=3-650w 650w, http://placehold.it/960x300?text=3-960w 960w" data-sizes="100vw">
+                <img src="assets/imgs/mainbg.jpg" alt="img">
             </div>
             <div>
-              <img data-lazy="http://placehold.it/350x300?text=4-350w"  data-srcset="http://placehold.it/650x300?text=4-650w 650w, http://placehold.it/960x300?text=4-960w 960w" data-sizes="100vw">
+                <img src="assets/imgs/mainbg.jpg" alt="img">
             </div>
             <div>
-              <img data-lazy="http://placehold.it/350x300?text=5-350w"  data-srcset="http://placehold.it/650x300?text=5-650w 650w, http://placehold.it/960x300?text=5-960w 960w" data-sizes="100vw">
+                <img src="assets/imgs/mainbg.jpg" alt="img">
             </div>
             <div>
-              <img data-lazy="http://placehold.it/350x300?text=6-350w"  data-srcset="http://placehold.it/650x300?text=6-650w 650w, http://placehold.it/960x300?text=6-960w 960w">
+                <img src="assets/imgs/mainbg.jpg" alt="img">
             </div>
           </section>
-
+          <button>등록</button>
         </div>
       </article>
     </section>
@@ -106,25 +106,28 @@
         </div>
         <div class="content content2">
           <p>현장위치메모</p>
-          <textarea name="name" rows="8" cols="80"></textarea>
+          <textarea name="name" rows="4" cols="80"></textarea>
 
-          <link rel="stylesheet" href="assets/slide/style.css">
-          <div class="carousel" id="carousel">
-            <div class="control-container">
-              <div class="prev" id="prev">&#10094</div>
-              <div class="image-selectors">
-                <div class="circle" id="circle1" style="background-color: #FF6464;"></div>
-                <div class="circle" id="circle2"></div>
-                <div class="circle" id="circle3"></div>
-              </div>
-              <div class="next" id="next">&#10095</div>
+          <section class="lazy slider" data-sizes="100vw">
+            <div>
+              <img src="assets/imgs/mainbg.jpg" alt="img">
             </div>
-            <div class="slides" id="slides" style="margin-left:0px;">
-              <div class="slide slide1"></div>
-              <div class="slide slide2"></div>
-              <div class="slide slide3"></div>
+            <div>
+              <img src="assets/imgs/mainbg.jpg" alt="img">
             </div>
-          </div>
+            <div>
+                <img src="assets/imgs/mainbg.jpg" alt="img">
+            </div>
+            <div>
+                <img src="assets/imgs/mainbg.jpg" alt="img">
+            </div>
+            <div>
+                <img src="assets/imgs/mainbg.jpg" alt="img">
+            </div>
+            <div>
+                <img src="assets/imgs/mainbg.jpg" alt="img">
+            </div>
+          </section>
           <button>등록</button>
 
         </div>
@@ -151,7 +154,7 @@
 
 
   <script src="assets/script.js"></script>
-  <script  src="assets/slide/script.js"></script>
+  <!-- <script  src="assets/slide/script.js"></script> -->
   <script src="assets/asideMenu.js"></script>
   <script src="assets/company.js"></script>
   <script src="assets/acc.js"></script>
