--- a/company-info-tab2.html
+++ b/company-info-tab2.html
@@ -74,22 +74,22 @@
 
           <section class="lazy slider" data-sizes="100vw">
             <div>
-              <img src="assets/imgs/mainbg.jpg" alt="img">
+              <img src="assets/imgs/wave.jpg" alt="img">
             </div>
             <div>
-              <img src="assets/imgs/mainbg.jpg" alt="img">
+              <img src="assets/imgs/wave.jpg" alt="img">
             </div>
             <div>
-                <img src="assets/imgs/mainbg.jpg" alt="img">
+                <img src="assets/imgs/wave.jpg" alt="img">
             </div>
             <div>
-                <img src="assets/imgs/mainbg.jpg" alt="img">
+                <img src="assets/imgs/wave.jpg" alt="img">
             </div>
             <div>
-                <img src="assets/imgs/mainbg.jpg" alt="img">
+                <img src="assets/imgs/wave.jpg" alt="img">
             </div>
             <div>
-                <img src="assets/imgs/mainbg.jpg" alt="img">
+                <img src="assets/imgs/wave.jpg" alt="img">
             </div>
           </section>
           <button>등록</button>
@@ -110,22 +110,22 @@
 
           <section class="lazy slider" data-sizes="100vw">
             <div>
-              <img src="assets/imgs/mainbg.jpg" alt="img">
+              <img src="assets/imgs/wave.jpg" alt="img">
             </div>
             <div>
-              <img src="assets/imgs/mainbg.jpg" alt="img">
+              <img src="assets/imgs/wave.jpg" alt="img">
             </div>
             <div>
-                <img src="assets/imgs/mainbg.jpg" alt="img">
+                <img src="assets/imgs/wave.jpg" alt="img">
             </div>
             <div>
-                <img src="assets/imgs/mainbg.jpg" alt="img">
+                <img src="assets/imgs/wave.jpg" alt="img">
             </div>
             <div>
-                <img src="assets/imgs/mainbg.jpg" alt="img">
+                <img src="assets/imgs/wave.jpg" alt="img">
             </div>
             <div>
-                <img src="assets/imgs/mainbg.jpg" alt="img">
+                <img src="assets/imgs/wave.jpg" alt="img">
             </div>
           </section>
           <button>등록</button>
