--- a/email/email.html
+++ b/email/email.html
@@ -33,25 +33,31 @@
 </table>
 <p></p>
 <div>
-		<h1>&nbsp<font size="3">㈜GSK는 최고의 품질과 서비스를 추구합니다.</font></h1>
-		<p>&nbsp&nbsp<font size="2">2021.11.10에 진행한 수질분석표 보고서는 첨부파일을 다운받아 확인 하실 수 있습니다.</font></p>
+		<ul>
+			<h1><font size="3">㈜GSK는 최고의 품질과 서비스를 추구합니다.</font></h1>
+			<p><font size="2">2021.11.10에 진행한 수질분석표 보고서는 첨부파일을 다운받아 확인 하실 수 있습니다.</font></p>
+		</ul>
 </div>
 <p></p>
-<table border="2" bordercolor="#ccc">
-	<tr>
-		<td height='40' width='200'>보고서 구분</td>
-		<td height='40' width='200'>수질분석표</td>
-	</tr>
-	<tr>
-		<td height='40' width='200'>Sampling Date</td>
-		<td height='40' width='200'>2021.11.10</td>
-	</tr>
-	<tr>
-		<td height='40'>Sampling Time</td>
-		<td>14:00</td>
-	</tr>
-</table>
-<p></p>
+<div width="100px">
+<ul>
+	<table border="2" bordercolor="#eee">
+		<tr>
+			<!-- <td width="10" rowspan="3"></td> -->
+			<td height='40' width='200' bgcolor="#f1f1f1">보고서 구분</td>
+			<td height='40' width='200'>수질분석표</td>
+		</tr>
+		<tr>
+			<td height='40' width='200' bgcolor="#f1f1f1">Sampling Date</td>
+			<td height='40' width='200'>2021.11.10</td>
+		</tr>
+		<tr>
+			<td height='40' bgcolor="#f1f1f1">Sampling Time</td>
+			<td>14:00</td>
+		</tr>
+	</table>
+</ul>
+</div>
 <table id="Table_01" width="720" height="119" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td colspan="3">
