--- a/email/email.html
+++ b/email/email.html
@@ -1,6 +1,6 @@
 <html lang='ko'>
 <head>
-<title>works</title>
+<title>email</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
