--- a/water-quality-tab1.html
+++ b/water-quality-tab1.html
@@ -49,9 +49,9 @@
 
 <section class="co-header">
   <div>
-    <div>
-      <h2><a href="water-quality-tab1.html" style="background:#B7B1DC">수질분석 보고서</a></h2>
-      <h2><a href="water-quality-tab2.html" style="background:#fff; border-radius: 0 0 8px 0;">미생물 테스트 보고서</a></h2>
+    <div class="quality-tabWrapper">
+      <h2><a href="water-quality-tab1.html" style="background:#fff; border-radius: 8px 0 0 8px;">수질분석 보고서</a></h2>
+      <h2><a href="water-quality-tab2.html" style="background:#B7B1DC; border-radius: 0 8px 8px 0;">미생물 테스트 보고서</a></h2>
     </div>
   </div>
 
@@ -79,19 +79,19 @@
       <table>
         <tr><td>No</td><td>Sampling Date</td><td>LSI지수</td></tr>
 
-        <tr onClick = " location.href='company-info-tab3-view.html' " >
+        <tr onClick = " location.href='water-quality-tab1-detail.html' " >
           <td>1</td><td>2021.09.06</td><td>1.5</td>
         </tr>
-        <tr onClick = " location.href='company-info-tab3-view.html' " >
+        <tr onClick = " location.href='water-quality-tab1-detail.html' " >
           <td>2</td><td>2021.09.06</td><td>1.5</td>
         </tr>
-        <tr onClick = " location.href='company-info-tab3-view.html' " >
+        <tr onClick = " location.href='water-quality-tab1-detail.html' " >
           <td>3</td><td>2021.09.06</td><td>1.5</td>
         </tr>
-        <tr onClick = " location.href='company-info-tab3-view.html' " >
+        <tr onClick = " location.href='water-quality-tab1-detail.html' " >
           <td>4</td><td>2021.09.06</td><td>1.5</td>
         </tr>
-        <tr onClick = " location.href='company-info-tab3-view.html' " >
+        <tr onClick = " location.href='water-quality-tab1-detail.html' " >
           <td>5</td><td>2021.09.06</td><td>1.5</td>
         </tr>
 
