--- a/water-quality-tab2-detail.html
+++ b/water-quality-tab2-detail.html
@@ -66,103 +66,39 @@
         <td colspan="">14:00</td>
       </tr>
     </table>
-    <h2>수질분석결과</h2>
+    <h2>미생물 테스트 결과</h2>
     <table>
       <tr class="headBar">
-        <td rowspan="2">Test</td>
-        <td colspan="">Date</td>
-        <td colspan="2">09.06</td>
+        <td rowspan="">Item</td>
+        <td colspan="">Cooling Water</td>
+        <td colspan="">비고</td>
       </tr>
       <tr class="headBar">
-        <td>Limits</td>
-        <td colspan="">M/U</td>
-        <td colspan="">C/W</td>
+        <td rowspan="">비고</td>
+        <td colspan="">09.06</td>
       </tr>
+      <tr>
+        <td style="border-top: 2px solid #aaa;">측정결과(CFU/ml)</td>
+        <td style="border-top: 2px solid #aaa;" colspan="">10</td>
+        <td style="border-top: 2px solid #aaa;" colspan="">-</td>
+      </tr>
+      <tr>
+        <td>측정사진</td>
+        <td colspan="" class="resultPic"><img src="assets/imgs/mainbg.jpg" alt="img"></td>
+        <td colspan="">Limits<br>10</td>
+      </tr>
+    </table>
+    <h2>BACTERIA 기준표(마리/ml)</h2>
+    <table>
+
 
       <tr>
-        <td style="border-top: 2px solid #aaa;">pH Value</td>
-        <td style="border-top: 2px solid #aaa;" colspan="">7.0~8.6</td>
-        <td style="border-top: 2px solid #aaa;" colspan="">7.0~8.6</td>
-        <td style="border-top: 2px solid #aaa;" colspan="">7.0~8.6</td>
+        <td>BACTERIA<br>기준표</td>
+        <td colspan="" class="resultPic"><img src="assets/imgs/mainbg.jpg" alt="img"></td>
       </tr>
-      <tr>
-        <td>Total Alkalinity ppm as CaCO3</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-      </tr>
-      <tr>
-        <td>Ca-Hardness ppm as CaCO3</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-      </tr>
-      <tr>
-        <td>Chloride ppm CI</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-      </tr>
-      <tr>
-        <td>Conductivity μS/cm </td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-      </tr>
-      <tr>
-        <td>Total iron ppm Fe</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-      </tr>
-      <tr>
-        <td>Turbidity NTU</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-      </tr>
-      <tr>
-        <td>Ortho - phosphate ppm PO4</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-      </tr>
-      <tr>
-        <td>Filtered - phosphate ppm PO4</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-      </tr>
-      <tr>
-        <td>△- phosphate ppm PO4</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-      </tr>
-      <tr>
-        <td>Zinc ppm Zn</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-      </tr>
-      <tr>
-        <td>LSI 지수</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="">7.0~8.6</td>
-      </tr>
-      <tr>
-        <td>Cycles of Concentration</td>
-        <td colspan="">7.0~8.6</td>
-        <td colspan="2">7.0~8.6</td>
-      </tr>
-
     </table>
 
-
-
   </div>
-
 
 </div>
 
