--- a/water-quality-tab2.html
+++ b/water-quality-tab2.html
@@ -33,7 +33,7 @@
       <ul>
          <li><a href="index.html">대시보드</a></li>
          <li><a href="company.html">업체현황</a></li>
-         <li><a href="water-quality-tab1.html">수질현황</a></li>
+         <li><a href="">수질현황</a></li>
          <li><a href="sub.html">근태관리</a></li>
          <li><a href="diary.html">일정관리</a></li>
          <li><a href="">알림함</a></li>
@@ -47,11 +47,11 @@
 
   <div class="container">
 
-<section class="co-header co-header-quality">
+<section class="co-header co-header-quality" >
   <div>
     <div class="quality-tabWrapper">
-      <h2><a href="water-quality-tab1.html" style="background:#fff; border-radius: 8px 0 0 8px;">수질분석 보고서</a></h2>
-      <h2><a href="water-quality-tab2.html" style="background:#B7B1DC; border-radius: 0 8px 8px 0;">미생물 테스트 보고서</a></h2>
+      <h2><a href="water-quality-tab1.html" style="background:#B7B1DC; border-radius: 8px 0 0 8px;">수질분석 보고서</a></h2>
+      <h2><a href="water-quality-tab2.html" style="background:#fff; border-radius: 0 8px 8px 0;">미생물 테스트 보고서</a></h2>
     </div>
   </div>
 
@@ -77,27 +77,27 @@
 
     <section class="co_wrapper co_tabContent">
       <table>
-        <tr><td>No</td><td>Sampling Date</td><td>LSI지수</td></tr>
+        <tr><td>No</td><td>Sampling Date</td><td>측정결과</td></tr>
 
-        <tr onClick = " location.href='water-quality-tab1-detail.html' " >
+        <tr onClick = " location.href='water-quality-tab2-detail.html' " >
           <td>1</td><td>2021.09.06</td><td>1.5</td>
         </tr>
-        <tr onClick = " location.href='water-quality-tab1-detail.html' " >
+        <tr onClick = " location.href='water-quality-tab2-detail.html' " >
           <td>2</td><td>2021.09.06</td><td>1.5</td>
         </tr>
-        <tr onClick = " location.href='water-quality-tab1-detail.html' " >
+        <tr onClick = " location.href='water-quality-tab2-detail.html' " >
           <td>3</td><td>2021.09.06</td><td>1.5</td>
         </tr>
-        <tr onClick = " location.href='water-quality-tab1-detail.html' " >
+        <tr onClick = " location.href='water-quality-tab2-detail.html' " >
           <td>4</td><td>2021.09.06</td><td>1.5</td>
         </tr>
-        <tr onClick = " location.href='water-quality-tab1-detail.html' " >
+        <tr onClick = " location.href='water-quality-tab2-detail.html' " >
           <td>5</td><td>2021.09.06</td><td>1.5</td>
         </tr>
 
       </table>
       <table>
-        <tr><td>No</td><td>Sampling Date</td><td>LSI지수</td></tr>
+        <tr><td>No</td><td>Sampling Date</td><td>측정결과</td></tr>
         <tr><td>1</td><td>2021.09.07</td><td>1.5</td></tr>
         <tr><td>2</td><td>2021.09.07</td><td>1.5</td></tr>
         <tr><td>3</td><td>2021.09.07</td><td>1.5</td></tr>
@@ -105,7 +105,7 @@
         <tr><td>5</td><td>2021.09.07</td><td>1.5</td></tr>
       </table>
       <table>
-        <tr><td>No</td><td>Sampling Date</td><td>LSI지수</td></tr>
+        <tr><td>No</td><td>Sampling Date</td><td>측정결과</td></tr>
         <tr><td>1</td><td>2021.09.08</td><td>1.5</td></tr>
         <tr><td>2</td><td>2021.09.08</td><td>1.5</td></tr>
         <tr><td>3</td><td>2021.09.08</td><td>1.5</td></tr>
