--- a/company.html
+++ b/company.html
@@ -53,7 +53,7 @@
 </head>
 <body>
    <header>
-      <span><a href="index.html"><img src="assets/imgs/nav-logo.png" alt=""></a></span>
+      <a onclick="javascript:history.back();"><i class="bi bi-chevron-left" style="font-size: 1.5rem;"></i></a>
       <span>
          <a href="#">
             <svg width="27" height="18" viewBox="0 0 27 18" fill="none" xmlns="http://www.w3.org/2000/svg">
