--- a/company-info-tab3.html
+++ b/company-info-tab3.html
@@ -15,7 +15,7 @@
 <body>
    <header>
       <a onclick="javascript:history.back();"><i class="bi bi-chevron-left" style="font-size: 1.5rem;"></i></a>
-      <span class="navTitle">업체현황</span>
+      <span class="navTitle">업체현황 상세</span>
       <span>
          <a href="#">
             <svg width="27" height="18" viewBox="0 0 27 18" fill="none" xmlns="http://www.w3.org/2000/svg">
