--- a/diary.html
+++ b/diary.html
@@ -33,16 +33,16 @@
   <aside class="aside">
      <i class="bi bi-x-lg"></i>
      <ul>
-       <li><a href="index.html">대시보드</a></li>
-       <li><a href="company.html">업체현황</a></li>
-       <li><a href="">수질현황</a></li>
-       <li><a href="sub.html">근태관리</a></li>
-       <li><a href="diary.html">일정관리</a></li>
-       <li><a href="">알림함</a></li>
-       <li><a href="https://jdwcg.github.io/qbot/">지톡</a></li>
-       <li><a href="">공지사항</a></li>
-       <li><a href="">비밀번호 변경</a></li>
-       <li><a href="login.html">로그아웃</a></li>
+        <li><a href="index.html">대시보드</a></li>
+        <li><a href="company.html">업체현황</a></li>
+        <li><a href="water-quality-tab1.html">수질현황</a></li>
+        <li><a href="sub.html">근태관리</a></li>
+        <li><a href="diary.html">일정관리</a></li>
+        <li><a href="">알림함</a></li>
+        <li><a href="https://jdwcg.github.io/qbot/">지톡</a></li>
+        <li><a href="">공지사항</a></li>
+        <li><a href="">비밀번호 변경</a></li>
+        <li><a href="login.html">로그아웃</a></li>
      </ul>
   </aside>
   <div class="asideBg"></div>
