--- a/water-quality-tab2.html
+++ b/water-quality-tab2.html
@@ -34,7 +34,7 @@
       <ul>
          <li><a href="index.html">대시보드</a></li>
          <li><a href="company.html">업체현황</a></li>
-         <li><a href="">수질현황</a></li>
+         <li><a href="water-quality-tab1.html">수질현황</a></li>
          <li><a href="sub.html">근태관리</a></li>
          <li><a href="diary.html">일정관리</a></li>
          <li><a href="">알림함</a></li>
