6메뉴슬라이드 수7

--- a/diary.html
+++ b/diary.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="assets/sub.css">
   <link rel="stylesheet" href="assets/company-info.css">
   <link rel="stylesheet" href="assets/diary.css">
+  <style>button{margin-top: 0;}</style>
 </head>
 
 <body>
