--- a/diary.html
+++ b/diary.html
@@ -365,6 +365,7 @@
       </table>
     </section>
     </div>
+      <footer></footer>
 <style> select {background: #f5f5f5; border: none !important;} </style>
 <script src="assets/script.js"></script>
   <script src="assets/sub.js"></script>
