--- a/email/email.html
+++ b/email/email.html
@@ -55,6 +55,7 @@
 	</table>
 </ul>
 </div>
+<ul><p><input type="button" value="보고서다운로드"></p></ul>
 <table id="Table_01" width="720" height="119" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td colspan="3">
