--- a/email/email.html
+++ b/email/email.html
@@ -66,7 +66,7 @@
 			<img src="images2/works_02.gif" width="32" height="71" alt=""></td>
 		<td width="596" height="71" alt="" bgcolor="#f1f1f1">
 			<font size='2' color="#999">본 메일은 GSK의 발신 전용 메일입니다.<br></font>
-			<font size='2' color="#999">서울특별시 금천구 가산디지털1로 168 우림라이온스밸리 C동 201호<br></font>
+			<font size='2' color="#999">경기도 시흥시 마유로 132번길 51 3라 223호(정왕동)<br></font>
 			<font size='2' color="#999">COPYRIGHT ⓒ GSK ALL RIGHTS RESERVED.</font>
 		</td>
 		<td>
