--- a/company-info-tab2.html
+++ b/company-info-tab2.html
@@ -40,10 +40,11 @@
          <li><a href="water-quality-tab1.html">수질현황</a></li>
          <li><a href="sub.html">근태관리</a></li>
          <li><a href="diary.html">일정관리</a></li>
-         <li><a href="">알림함</a></li>
+         <li><a href="alert.html">알림함</a></li>
          <li><a href="https://jdwcg.github.io/qbot/">지톡</a></li>
-         <li><a href="">공지사항</a></li>
-         <li><a href="">비밀번호 변경</a></li>
+         <li><a href="notice.html">공지사항</a></li>
+         <li><a href="settings.html">환경설정</a></li>
+         <li><a href="password.html">비밀번호 변경</a></li>
          <li><a href="login.html">로그아웃</a></li>
       </ul>
    </aside>
@@ -81,9 +82,13 @@
             <div>
                 <img src="assets/imgs/wave.jpg" alt="img">
             </div>
-
-
           </section>
+          <section class="imgAttach">
+            <input type="file">
+            <input type="file">
+            <input type="file">
+          </section>
+
           <button>등록</button>
         </div>
       </article>
@@ -110,7 +115,11 @@
             <div>
                 <img src="assets/imgs/wave.jpg" alt="img">
             </div>
-
+          </section>
+          <section class="imgAttach">
+            <input type="file">
+            <input type="file">
+            <input type="file">
           </section>
           <button>등록</button>
 
