--- a/alert-tab2.html
+++ b/alert-tab2.html
@@ -81,8 +81,8 @@
 
 <script src="assets/script.js"></script>
 <script src="assets/asideMenu.js"></script>
-<script src="assets/company.js"></script>
-<script src="assets/popup.js"></script>
+<!-- <script src="assets/company.js"></script> -->
+<!-- <script src="assets/popup.js"></script> -->
 
 
 </body>
