--- a/alert-view.html
+++ b/alert-view.html
@@ -66,8 +66,8 @@
 
 <script src="assets/script.js"></script>
 <script src="assets/asideMenu.js"></script>
-<script src="assets/company.js"></script>
-<script src="assets/popup.js"></script>
+<!-- <script src="assets/company.js"></script> -->
+<!-- <script src="assets/popup.js"></script> -->
 
 
 </body>
