--- a/tasknote.html
+++ b/tasknote.html
@@ -17,7 +17,7 @@
 <body>
    <header>
       <a onclick="javascript:history.back();"><i class="bi bi-chevron-left" style="font-size: 1.5rem;"></i></a>
-      <span class="navTitle">알림</span>
+      <span class="navTitle">공지사항</span>
       <span>
          <a href="#">
             <svg width="27" height="18" viewBox="0 0 27 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -49,41 +49,35 @@
    <div class="asideBg"></div>
 <div class="height"></div>
 <section class="accWrap">
+
     <div class="accTab">
-      <h2 style="background:#fff;"><a href="alert.html">미확인 알림</a></h2>
-      <h2><a href="alert-tab2.html">확인된 알림</a></h2>
+      <h2><a href="">미확인 알림</a></h2>
+      <h2><a href="">확인된 알림</a></h2>
     </div>
     <div class="accTxt">
       <div class="accBar">
         <p>
-          <a href="alert-view.html">Lorem ipsum dolor sit amet</a>
+          Lorem ipsum dolor sit amet
         </p>
+        <i class="bi bi-chevron-down" style="font-size: 1.5rem;"></i>
       </div>
       <span>2021.09.06</span>
+      <p class="accTxtView">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque provident iure quos mollitia minima, sed pariatur, repudiandae dolores ducimus consectetur odit. Ab, aliquid temporibus debitis commodi error accusamus magnam perspiciatis?
+      </p>
     </div>
-    <div class="accTxt">
-      <div class="accBar">
-        <p>
-          <a href="alert-view.html">Lorem ipsum dolor sit amet</a>
-        </p>
-      </div>
-      <span>2021.09.06</span>
-    </div>
-    <div class="accTxt">
-      <div class="accBar">
-        <p>
-          <a href="alert-view.html">Lorem ipsum dolor sit amet</a>
-        </p>
-      </div>
-      <span>2021.09.06</span>
-    </div>
+
 </section>
 
 <script src="assets/script.js"></script>
 <script src="assets/asideMenu.js"></script>
-<!-- <script src="assets/company.js"></script> -->
-<!-- <script src="assets/popup.js"></script> -->
-
-
+<script>
+$(function(){
+  $('.accTxtView').hide();
+  $('.accBar').click(function(){
+    $(this).siblings('.accTxtView').toggle('fast');
+  })
+})
+</script>
 </body>
 </html>
